      - Updated: Magento order address change results in overriding validated address of Packeta order to address without house number
      - Added: ability to change shipping address in Packeta order detail in administration
      - Added: visualization of validated address in Packeta order detail
      - Fixed: order list column selection reset button now shows all columns on click

2.2.2 - Added: email template variables
      - Added: order grid filtering and sorting by order creation
      - Added: sorting by order status
      - Updated: link to Magento order detail was moved to actions column

2.2.1 - Fixed: slow order grid loading
      - Fixed: order grid did not display paging controls on top of the grid and did not display row count
      - Fixed: order grid export did not set flags correctly

2.2.0 - Added: inline order grid editation
      - Fixed: cart and order weight calculation

2.1.0 - Added: Packeta related checkout delivery option availability is based on specified pricing rules and carrier support of countries and delivery methods
      - Removed: default price and specific countries GUI removed from delivery method configuration
      - Added: Packeta multi-carrier ability and default price migration
      - Added: non-intrusive carrier import from Packeta branch feed via command and cron job
      - Updated: README.md installation steps
      - Added: Support for Packeta external carriers (currently the module does not support: delivery to non-EU addresses, carriers who have prohibited cash on delivery, evening delivery Prague, Brno, Ostrava, Bratislava)
      - Updated: Pricing rules configuration

2.0.5 - Fixed: guest is now able to select pickup point
      - Fixed: frontend pickup point validation now works for guest
      - Fixed: some older browser incompatibility
      - Added: user interface for changing order pickup point in administration

2.0.4 - Fixed: Packeta order now can not be created without pickup point
